tests/NormalTests/paczka1/small_fuzzy/68230483.err
Error in line 6: 6b30 A988 8,5
Error in line 4: l6jW5 A988 40,5
Error in line 15: lx2VaYwoac8 A988 52,8
